@@ -17,19 +17,8 @@ REM limitations under the License.
 REM
 REM ** This Windows BAT file is not tested with each Voldemort release. **
 
-set argC=0
-for %%a in (%*) do set /a argC+=1
-if %argC% leq 2 goto :continue
-echo USAGE: bin/voldemort-server.bat [voldemort_home_dir] [voldemort_config_dir]
-goto :eof
-:continue
-
-setlocal
-
 SET BASE_DIR=%~dp0..
 SET CLASSPATH=.
-
-set VOLDEMORT_CONFIG_DIR=%1%/config
 
 for %%j in ("%BASE_DIR%\dist\*.jar") do (call :append_classpath "%%j")
 for %%j in ("%BASE_DIR%\contrib\*\lib\*.jar") do (call :append_classpath "%%j")
@@ -42,8 +31,9 @@ set CLASSPATH=%CLASSPATH%;%1
 goto :eof
 
 :run
-if "%VOLD_OPTS%" == "" set "VOLD_OPTS=-Xmx2G -server -Dcom.sun.management.jmxremote"
-java %VOLD_OPTS% -cp %CLASSPATH% voldemort.server.VoldemortServer %*
+set JVM_OPTS=-server -Xms2g -Xmx2g -XX:NewSize=1024m -XX:MaxNewSize=1024m -XX:+AlwaysPreTouch -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:CMSInitiatingOccupancyFraction=70 -XX:SurvivorRatio=2
+
+java -Dlog4j.debug -Dlog4j.configuration="file:/%BASE_DIR%\src\java\log4j.properties" %JVM_OPTS% -cp %CLASSPATH% voldemort.store.bdb.dataconversion.BdbConvertData %*
 
 endlocal
 :eof
